--- a/lesson00-starter/pom.xml
+++ b/lesson00-starter/pom.xml
@@ -43,6 +43,12 @@
                 <version>${jackson.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.83</version>
+            </dependency>
+
             <!--数据库-->
             <!--Mysql数据库驱动-->
             <dependency>
