--- a/lesson00-starter/coupon-template-service/coupon-template-impl/pom.xml
+++ b/lesson00-starter/coupon-template-service/coupon-template-impl/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.coding</groupId>
             <artifactId>coupon-template-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${coupon.client.version}</version>
         </dependency>
 
         <dependency>
