--- a/lesson00-starter/coupon-customer-serv/coupon-customer-impl/pom.xml
+++ b/lesson00-starter/coupon-customer-serv/coupon-customer-impl/pom.xml
@@ -10,7 +10,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>coupon-calculation-impl</artifactId>
+    <artifactId>coupon-customer-impl</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -20,25 +20,39 @@
     <dependencies>
         <dependency>
             <groupId>org.coding</groupId>
-            <artifactId>coupon-calculation-api</artifactId>
+            <artifactId>coupon-customer-api</artifactId>
+            <version>${coupon.client.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.coding</groupId>
+            <artifactId>coupon-template-api</artifactId>
             <version>${coupon.client.version}</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.coding</groupId>
-            <artifactId>coupon-template-api</artifactId>
+            <artifactId>coupon-calculation-api</artifactId>
             <version>${coupon.client.version}</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <groupId>org.coding</groupId>
+            <artifactId>coupon-template-impl</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.coding</groupId>
+            <artifactId>coupon-calculation-impl</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
