--- a/lesson00-starter/coupon-template-service/coupon-template-impl/pom.xml
+++ b/lesson00-starter/coupon-template-service/coupon-template-impl/pom.xml
@@ -35,6 +35,11 @@
             <scope>test</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
