--- a/lesson00-starter/coupon-template-service/coupon-template-impl/src/main/resources/application.yml
+++ b/lesson00-starter/coupon-template-service/coupon-template-impl/src/main/resources/application.yml
@@ -37,3 +37,9 @@ spring:
 logging:
   level:
     com.broadview.coupon: debug
+
+## basic
+mail:
+  hostname: smtp.163.com
+  port: 25
+  from: jay.xu@example.com
