--- a/lesson00-starter/coupon-customer-serv/coupon-customer-impl/pom.xml
+++ b/lesson00-starter/coupon-customer-serv/coupon-customer-impl/pom.xml
@@ -37,22 +37,38 @@
             <version>${coupon.client.version}</version>
             <scope>compile</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.coding</groupId>
             <artifactId>coupon-template-impl</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${coupon.client.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.coding</groupId>
             <artifactId>coupon-calculation-impl</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${coupon.client.version}</version>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
+        <!--负载均衡-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+        <!--webflux使用-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
     </dependencies>
 
