--- a/lesson00-starter/coupon-customer-serv/coupon-customer-impl/src/main/resources/application.yml
+++ b/lesson00-starter/coupon-customer-serv/coupon-customer-impl/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   datasource:
     # mysql数据源
     username: root
-    #    password:
+    password: 1234
     url: jdbc:mysql://127.0.0.1:3306/geekbang_coupon_db?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.jdbc.Driver
@@ -36,7 +36,7 @@ spring:
     nacos:
       discovery:
         # Nacos的服务注册地址，可以配置多个，逗号分隔
-        server-addr: localhost:8948
+        server-addr: localhost:8951
         # 服务注册到Nacos上的名称，一般不用配置
         service: coupon-customer-serv
         # nacos客户端向服务端发送心跳的时间间隔，时间单位其实是ms
