14节-openfeign日志、超时、降级兜底

--- a/lesson00-starter/coupon-customer-serv/coupon-customer-impl/pom.xml
+++ b/lesson00-starter/coupon-customer-serv/coupon-customer-impl/pom.xml
@@ -77,6 +77,19 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <!--hystrix组件，模拟降级，引入后超时自动降级 fallback类兜底，未引入时异常为 socket read timeout-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.2.10.RELEASE</version>
+            <exclusions>
+                <!--移除 ribbon,避免冲突-->
+                <exclusion>
+                    <groupId>org.springframework.cloud</groupId>
+                    <artifactId>spring-cloud-netflix-ribbon</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
