16节-nacos动态配置

--- a/lesson00-starter/coupon-customer-serv/coupon-customer-impl/pom.xml
+++ b/lesson00-starter/coupon-customer-serv/coupon-customer-impl/pom.xml
@@ -91,6 +91,18 @@
             </exclusions>
         </dependency>
 
+        <!--nacos 动态配置-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+        <!--读取 bootstrap文件，应用程序上下文引导时加载，优先于 application.yml-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
