--- a/lesson00-starter/coupon-customer-serv/coupon-customer-impl/src/main/resources/application.yml
+++ b/lesson00-starter/coupon-customer-serv/coupon-customer-impl/src/main/resources/application.yml
@@ -7,22 +7,22 @@ server:
 spring:
   application:
     name: coupon-customer-serv
-  datasource:
-    # mysql数据源
-    username: root
-    password: 1234
-    url: jdbc:mysql://127.0.0.1:3306/geekbang_coupon_db?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC
-    type: com.zaxxer.hikari.HikariDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    # 连接池
-    hikari:
-      pool-name: GeekbangCouponHikari
-      connection-timeout: 5000
-      idle-timeout: 30000
-      maximum-pool-size: 10
-      minimum-idle: 5
-      max-lifetime: 60000
-      auto-commit: true
+#  datasource:
+#    # mysql数据源
+#    username: root
+#    password: 1234
+#    url: jdbc:mysql://127.0.0.1:3306/geekbang_coupon_db?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC
+#    type: com.zaxxer.hikari.HikariDataSource
+#    driver-class-name: com.mysql.jdbc.Driver
+#    # 连接池
+#    hikari:
+#      pool-name: GeekbangCouponHikari
+#      connection-timeout: 5000
+#      idle-timeout: 30000
+#      maximum-pool-size: 10
+#      minimum-idle: 5
+#      max-lifetime: 60000
+#      auto-commit: true
   jpa:
     show-sql: true
     hibernate:
@@ -83,7 +83,7 @@ feign:
         read-timeout: 2000
       #指定服务超时配置，优先级更高
       coupon-template-serv:
-        connect-timeout: 100
+        connect-timeout: 500
         read-timeout: 200
   circuitbreaker:
     enabled: true
