--- a/lesson00-starter/pom.xml
+++ b/lesson00-starter/pom.xml
@@ -24,6 +24,7 @@
         <module>coupon-customer-serv</module>
         <module>coupon-customer-serv/coupon-customer-api</module>
         <module>coupon-customer-serv/coupon-customer-impl</module>
+        <module>middleware</module>
     </modules>
 
     <properties>
@@ -46,6 +47,13 @@
                 <version>2021.1</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <!--日志搜集-->
+            <dependency>
+                <groupId>net.logstash.logback</groupId>
+                <artifactId>logstash-logback-encoder</artifactId>
+                <version>7.0.1</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
